# transaction_classifier

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api/: auth.py  main.py  oauth2_client.py
schemas/: transaction.py
training/: data_fetcher.py  model.py  pipeline.py  transaction_classifier.py
training/pipelines/: description.py  subcategory.py
training/predictors/: description.py  subcategory.py
